tests/semantic/valid/variable_declared_with_binary_expressions.c
/*
 * Multi-line comment.
 */

#include <stdio.h>
#include <stdint.h>

int32_t a = 4+2;
int32_t b = 4*2;
int32_t c = 4 >> 2;

