tests/semantic/invalid/function_name_already_declared.c
/*
 * Multi-line comment.
 */

#include <stdint.h>
#include <stdio.h>

int32_t foo;

void foo(char c);

int32_t bar[2];

void bar(char c);
